Add more styles: colors

--- a/src/notes-frontend/src/main-styles.scss
+++ b/src/notes-frontend/src/main-styles.scss
@@ -1,23 +1,21 @@
-// Changing bulma styles or global ones
+@charset "utf-8"; // Changing bulma styles or global ones
 
-@charset "utf-8";
-
-// Import a Google Font
 @import url('https://fonts.googleapis.com/css?family=Nunito:400,700');
 
-// Set your brand colors
-$purple: #8A4D76;
-$pink: #FA7C91;
-$brown: #757763;
+$light-blue: #00d4ff;
+$dark-blue: #090979;
+$brown: #706031;
+$blue: #37c7f2;
 $beige-light: #D0D1CD;
 $light: #fafcff;
+$light-red: #FFCCCB;
 
 // Update Bulma's global variables
 $family-sans-serif: "Nunito", sans-serif;
 $grey-dark: $brown;
 $grey-light: $beige-light;
-$primary: $purple;
-$link: $pink;
+$primary: $light-blue;
+$link: $dark-blue;
 $widescreen-enabled: false;
 $fullhd-enabled: false;
 
