--- a/src/notes-frontend/src/app/pages/main-layout/main-layout.component.scss
+++ b/src/notes-frontend/src/app/pages/main-layout/main-layout.component.scss
@@ -1,3 +1,5 @@
+@import '../../../main-styles.scss';
+
 .layout-box {
   display: flex;
   flex-direction: column;
@@ -7,5 +9,25 @@
 
   .page-content {
    flex-grow: 1;
+   overflow-y: scroll;
+  }
+}
+
+.top-bar {
+  width: 100%;
+  height: 68px;
+  background: linear-gradient(to right, $dark-blue, $blue);
+
+  box-shadow: 0px 0px 10px 0px rgba(black, 0.15);
+  display: flex;
+  flex-shrink: 0;
+
+  justify-content: center;
+  align-items: center;
+
+  h1 {
+    color: white;
+    font-size: 24px;
+
   }
 }
