--- a/src/notes-frontend/src/app/note-card/note-card.component.scss
+++ b/src/notes-frontend/src/app/note-card/note-card.component.scss
@@ -30,11 +30,15 @@
       max-height: 80px;
 
       .truncate-text {
+        // make sure selecting text is still possible
+        pointer-events: none;
+
         background: white;
         bottom: 0;
         position: absolute;
         height: 50%;
         width: 100%;
+        background: linear-gradient(to bottom, rgba(white, 0) 0%, rgba(white, 0.8) 50%, white 100%)
       }
     }
 
