--- a/src/notes-frontend/src/app/pages/notes-list/notes-list.component.html
+++ b/src/notes-frontend/src/app/pages/notes-list/notes-list.component.html
@@ -11,7 +11,7 @@
   </div>
 
   <div class="notes-list">
-    <app-note-card></app-note-card>
+    <app-note-card [title]="'Test'" [content]="'Test content works'"></app-note-card>
     <app-note-card></app-note-card>
   </div>
 </div>
