Add naive Note model and listen for events in onSubmit
Just console.log(note) for now, saving will be added later

--- a/src/notes-frontend/src/app/pages/note-details/note-details.component.html
+++ b/src/notes-frontend/src/app/pages/note-details/note-details.component.html
@@ -2,12 +2,12 @@
 
   <!-- Because we have imported FormsModule in app.module.ts, Angular will
   automatically convert all form tags in to Angular forms.-->
-  <form #noteForm="ngForm">
+  <form #noteForm="ngForm" (ngSubmit)="onSubmit(noteForm)">
 
     <div class="field">
       <label class="label">Title</label>
       <div class="control">
-        <input type="text" required class="input">
+        <input type="text" name="title" [ngModel]="note?.title" required class="input">
       </div>
     </div>
 
@@ -17,7 +17,7 @@
     <div class="field">
       <div class="label">Content</div>
       <div class="control">
-        <textarea class="textarea"></textarea>
+        <textarea class="textarea" name="content" [ngModel]="note?.content"></textarea>
       </div>
     </div>
 
