Use title as id, simplifies things

--- a/src/notes-frontend/src/app/pages/notes-list/notes-list.component.html
+++ b/src/notes-frontend/src/app/pages/notes-list/notes-list.component.html
@@ -2,8 +2,8 @@
 
 
   <div class="notes-list">
-    <app-note-card *ngFor="let note of notes; index as i;"
-                   [routerLink]="i.toString()"
+    <app-note-card *ngFor="let note of notes"
+                   [routerLink]="note.title"
                    [title]="note.title"
                    [content]="note.content">
 
