Adds ability to export notes (anti vendor lock-in)

--- a/src/notes-frontend/src/app/pages/notes-list/notes-list.component.html
+++ b/src/notes-frontend/src/app/pages/notes-list/notes-list.component.html
@@ -10,5 +10,6 @@
     </app-note-card>
   </div>
 
-  <button class="button is-primary add-buttom" routerLink="new">Add</button>
+  <button class="button is-primary button-st add-butto" routerLink="new">Add</button>
+  <button class="button button-st export-button" (click)="export()">Export (JSON)</button>
 </div>
